refactor: html title

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
     </style>
-    <title>React Clean</title>
+    <title>Challenge React eith Solid TDD Clean Architect</title>
 </head>
 <body>
     <main id="main"></main>
