--- a/template.dev.html
+++ b/template.dev.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <title>4Dev - Enquetes para Programadores</title>
+  <title>Challenge React eith Solid TDD Clean Architect</title>
 </head>
 
 <body>
